<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">飞凡商家</string>
    <string name="progress_bar_text">请稍候...</string>
    <string name="progress_bar_login">登录中...</string>
    <string name="progress_bar_check_version">检查更新...</string>
    <string name="version_update_force">您目前的版本已过期，为了不影响使用，请升级到最新版本。</string>
    <string name="version_update_normal">目前有新版本，是否升级？</string>
    <string name="btn_version_update_later">稍候</string>
    <string name="btn_version_update_new">更新</string>
    <string name="version_update_title">版本更新</string>
    <string name="no_title_text">无标题</string>
    <string name="login_login_text">登录</string>
    <string name="login_phone_edit_hint">请输入手机号</string>
    <string name="login_password_edit_hint">请输入密码</string>
    <string name="login_forget_password_text">忘记密码</string>
    <string name="home_index_text">首页</string>
    <string name="home_message_text">消息</string>
    <string name="home_settings_text">设置</string>
    <string name="home_message_title_text">消息中心</string>
    <string name="index_scan_text">扫码验证</string>
    <string name="index_history_text">验证历史</string>
    <string name="index_order_text">订单管理</string>
    <string name="index_report_text">统计报表</string>
    <string name="index_staff_text">员工管理</string>
    <string name="index_refund_text">退款售后</string>
    <string name="index_search_input_hint">请输入提货码或券码</string>
    <string name="index_commodity_text">商品管理</string>
    <string name="index_marketing_text">营销管理</string>
    <string name="browser_staff_add">添加员工</string>
    <string name="browser_staff_list">员工列表</string>
    <string name="browser_commodity_desc">宝贝描述</string>
    <string name="browser_coupon_list">优惠券列表</string>
    <string name="start_refund">发起退款</string>
    <string name="next">下一步</string>
    <string name="input_order_id">请输入订单号</string>
    <string name="refund_menu_start_text">我要退款</string>
    <string name="order_number_can_not_be_empty">订单号不能为空</string>
    <string name="settings_check_upgrade_format">检查更新&#040;当前版本&#058;<xliff:g>%1s</xliff:g>&#041;</string>
    <string name="settings_change_password_text">修改密码</string>
    <string name="settings_advice_feedback_text">意见反馈</string>
    <string name="settings_clear_cache_text">清除缓存</string>
    <string name="settings_logout_text">退出登录</string>
    <string name="settings_check_update_none">无最新版本</string>
    <string name="settings_clear_cache_finished_text">清除完毕</string>
    <string name="settings_help_center">帮助中心</string>
    <string name="settings_phone">客服电话</string>
    <string name="setting_phone_number">400-950-6655</string>
    <string name="message_empty">暂无消息</string>
    <string name="message_system">系统消息</string>
    <string name="message_notice">通知公告</string>
    <string name="login_info_not_enough">请输入完整信息</string>
    <string name="error_message_text_network_data_fail">数据请求有错误</string>
    <string name="error_message_text_offline">网络问题，请检查网络设置后重新尝试</string>
    <string name="error_message_text_phone_number_empty">手机号不能为空</string>
    <string name="error_message_text_login_empty">手机号和密码不能为空</string>
    <string name="error_message_text_login_password_empty">密码不能为空</string>
    <string name="error_message_text_old_password_empty">原始密码不能为空</string>
    <string name="error_message_text_new_password_empty">新密码不能为空</string>
    <string name="error_message_text_confirm_password_empty">确认密码不能为空</string>
    <string name="error_message_text_password_different">确认密码不一致</string>
    <string name="error_message_text_password_length">密码长度不能低于8位</string>
    <string name="error_message_text_password_length_max">密码长度不能大于20位</string>
    <string name="error_message_text_phone_number_illegal">请输入正确的11位手机号码</string>
    <string name="error_message_text_sms_code_empty">验证码不能为空</string>
    <string name="error_message_text_search_illegal_format">数据格式不正确</string>
    <string name="error_message_text_network_block">网络加载缓慢，请稍后再试</string>
    <string name="error_message_upload_picture_fail">未能上传图片</string>
    <string name="error_message_picture_size">海报图片尺寸必须是1280*720，请重新上传图片</string>
    <string name="error_message_feed_back_length">意见反馈信息长度不能超过300个字</string>
    <string name="error_message_feed_back_length_empty">意见反馈信息不能为空</string>
    <string name="error_message_permission_limited">无此操作权限</string>
    <string name="error_message_unknown">未知错误，请稍后重试</string>
    <string name="error_message_server_file">服务器文件错误</string>
    <string name="error_message_network">您的网络好像有点问题</string>
    <string name="error_message_timeout">网络超时</string>
    <string name="error_message_network_link">请检查您的网络连接</string>
    <string name="error_message_login_invalid">登录失效,请重新登录</string>
    <string name="sd_card_exist">sd卡不存在</string>
    <string name="title_activity_browser">BrowserActivity</string>
    <string name="reset_password">重置密码</string>
    <string name="confirm">确认</string>
    <string name="get_sms_code">获取验证码</string>
    <string name="input_sms_code">请输入验证码</string>
    <string name="input_origin_pwd">请输入原始密码</string>
    <string name="input_new_pwd">请输入新密码</string>
    <string name="input_confirm_new_pwd">请再次输入新密码</string>
    <string name="reset_pwd_suc">密码修改成功</string>
    <string name="sms_sended">验证码已发送</string>
    <string name="sms_error">验证码错误</string>
    <string name="new_password_sended">新密码已发送到你的手机中，请查收</string>
    <string name="resend">重新发送</string>
    <string name="card_sms_check_resend_format"><xliff:g>%1d</xliff:g>秒后重发</string>
    <string name="scan_code_title">扫一扫</string>
    <string name="lable_activity_scanner">CodeScannerActivity</string>
    <string name="please_again_input">请重新输入</string>
    <string name="query_result">查询结果</string>
    <string name="coupons_name">券码</string>
    <string name="error_message_text_sms_code_length_min">验证码至少需要10位</string>
    <string name="error_message_text_code_incorrect">验证码存在非法字符</string>
    <string name="action_rule">活动规则</string>
    <string name="check_success">核销成功</string>
    <string name="digit_letter_limit">
        0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ
    </string>
    <string name="common_title">提示信息</string>
    <string name="common_confirm">确定</string>
    <string name="common_cancel">取消</string>
    <string name="dialog_phone">从相册选择</string>
    <string name="dialog_camera">拍照</string>
    <string name="shop_select">门店选择</string>
    <string name="common_retry_text">重试</string>
    <string name="common_close_text">关闭</string>
    <string name="tab_veri_history_pickupgoods">提货码历史</string>
    <string name="tab_veri_history_coupone">券码历史</string>
    <string name="crop_done">确定</string>
    <string name="crop_cancel" tools:ignore="ButtonCase">取消</string>
    <string name="login_info">登录信息</string>
    <string name="login_info_name">姓名:</string>
    <string name="login_info_mobile_number">手机号:</string>
    <string name="login_info_identity">登录身份:</string>
    <string name="login_info_belongs_store">所属门店:</string>
    <string name="login_info_belongs_square">所属广场:</string>
    <string name="login_info_belongs_merchant">所属商户:</string>
    <string name="login_info_store">门店账号</string>
    <string name="login_info_merchant">商户账号</string>
    <string name="login_info_empty">无</string>
    <string name="help_center_title">帮助中心</string>
    <string name="feed_back">意见反馈</string>
    <string name="feed_back_info">您对飞凡的意见和建议，我们会尽快处理(300字以内)</string>
    <string name="feed_back_submit">提交</string>
    <string name="feed_back_prompt">300字以内</string>
    <string name="feed_back_success_prompt">感谢您的反馈，我们将努力做好产品</string>
    <string name="feed_back_input_strings">还能输入%d字符</string>
    <string name="check_manage_title">对账管理</string>
    <string name="check_manage_system_construction">系统建设中,敬请期待!</string>
    <string name="reconciliation_management_transaction_flow">交易流水</string>
    <string name="reconciliation_management_financial_reconciliation">财务对账</string>
    <string name="reconciliation_management_inventory_query">库存查询</string>
    <string name="reconciliation_management_view_details">查看详情</string>
    <string name="reconciliation_management_temporarily_not_open">暂不开放</string>
    <string name="indicator_title">指标说明</string>
    <string name="indicator_flash_purchase_index">闪购指标</string>
    <string name="indicator_payment_success">付款成功</string>
    <string name="indicator_store_line1">付款成功笔数：用户该时间内在该门店线上付款成功订单笔数；</string>
    <string name="indicator_store_line2">付款成功金额：用户该时间内在该门店线上付款成功订单金额；</string>
    <string name="indicator_trading_success">交易成功</string>
    <string name="indicator_write_off_successfully1">交易成功笔数：用户该时间内在该门店核销成功订单笔数；</string>
    <string name="indicator_write_off_successfully2">交易成功金额：在该时间内在该门店核销成功后应结算给该门店的金额（包括用户付款金额＋平台补贴金额）；</string>
    <string name="indicator_users_initiate_refund">用户退单</string>
    <string name="indicator_initiate_refund1">用户退单笔数：用户该时间内在该门店发起退款的订单笔数；</string>
    <string name="indicator_initiate_refund2">用户退单金额：用户该时间内在该门店发起退款的订单金额；</string>
    <string name="indicator_merchant_confirmation_refund">确认退款</string>
    <string name="indicator_system_automatic_refund1">确认退款笔数：用户已核销发起退款后由商户确认退款或系统自动退款的笔数；</string>
    <string name="indicator_system_automatic_refund2">确认退款金额：用户已核销发起退款后由商户确认退款或系统自动退款的金额（包括用户付款金额＋平台补贴金额）；</string>
    <string name="indicator_trade_count">交易笔数</string>
    <string name="indicator_trade_count_explain">用户该时间段内在该门店核销成功的订单笔数;</string>
    <string name="indicator_trade_amount">交易金额</string>
    <string name="indicator_trade_amount_explain">在该时间段内在该门店核销成功后应结算给该门店的金额（包括用户付款金额+平台补贴金额）;</string>
    <string name="indicator_refund_count">退款笔数</string>
    <string name="indicator_refund_count_explain">用户已核销发起退款后由商户确认退款或系统自动退款的笔数;</string>
    <string name="indicator_refund_amount">退款金额</string>
    <string name="indicator_refund_amount_explain">用户已核销发起退款后由商户确认退款或系统自动退款的金额（包括用户付款金额+平台补贴金额）;</string>
    <string name="indicator_general_vouchers">通用券指标</string>
    <string name="indicator_write_successfully">核销成功</string>
    <string name="indicator_general_certificate_success">该门店在该时间段内核销成功的通用券的笔数及金额;</string>
    <string name="indicator_more_trading_flow">更多交易流水单明细,请至sop.ffan.com查看</string>
    <string name="indicator_disclaimer">【今天】数据即时生成中仅供参考，往日数据可供查询</string>
    <string name="query_time">查询时间 : %s</string>
    <string name="query_when_time">查询时间 : %1$s至%2$s</string>
    <string name="query_interval_time">%1$s至%2$s</string>
    <string name="total_acount">总条数 : %s条</string>
    <string name="coupon_total_acount">(共%s条)</string>
    <string name="no_data">暂无数据</string>
    <string name="no_detail_data">暂时无明细数据</string>
    <string name="order_number">订单号</string>
    <string name="order_trade_amount">交易金额</string>
    <string name="order_trade_count">交易笔数</string>
    <string name="order_trade_time">交易时间</string>
    <string name="order_success_time">交易成功时间</string>
    <string name="order_refund_time">退款时间</string>
    <string name="order_refund_amount">退款金额</string>
    <string name="order_refund_count">退款笔数</string>
    <string name="coupon_code">券编码</string>
    <string name="coupon_name">券名称</string>
    <string name="chargeoff_time">核销时间</string>
    <string name="coupon_chargeoff_count">核销总笔数</string>
    <string name="coupon_award_amount">奖励金额</string>
    <string name="coupon_link_relative">(环比 %s )</string>
    <string name="money">￥%s</string>
    <string name="detail">明细</string>
    <string name="instant_detail">商品明细</string>
    <string name="instant_summary">商品汇总</string>
    <string name="instant_order_detail">交易明细</string>
    <string name="today">今天</string>
    <string name="yesterday">昨天</string>
    <string name="last1">上期</string>
    <string name="last2">上上期</string>
    <string name="custom">自定义</string>
    <string name="transaction_flow">交易流水</string>
    <string name="falsh_buy">闪购</string>
    <string name="coupons">通用券</string>
    <string name="pay_success_num">付款成功笔数</string>
</resources>