<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingLeft="@dimen/view_spacing_15">

        <TextView
            android:id="@+id/indicator_explains_below"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/view_spacing_10"
            android:text="@string/indicator_disclaimer"/>

        <TextView
            style="@style/IndicatorDetails"
            android:drawableLeft="@drawable/vertical_blue_line"
            android:drawablePadding="@dimen/view_spacing_3"
            android:layout_marginTop="@dimen/view_spacing_12"
            android:text="@string/indicator_trade_count"
            android:textStyle="bold" />

        <TextView
            style="@style/txt_color66_size14"
            android:layout_marginTop="@dimen/view_spacing_10"
            android:text="@string/indicator_trade_count_explain" />

        <TextView
            style="@style/IndicatorDetails"
            android:layout_marginTop="@dimen/view_spacing_20"
            android:drawableLeft="@drawable/vertical_blue_line"
            android:drawablePadding="@dimen/view_spacing_3"
            android:text="@string/indicator_trade_amount"
            android:textStyle="bold" />

        <TextView
            style="@style/txt_color66_size14"
            android:layout_marginTop="@dimen/view_spacing_10"
            android:text="@string/indicator_trade_amount_explain" />

        <TextView
            style="@style/IndicatorDetails"
            android:layout_marginTop="@dimen/view_spacing_20"
            android:text="@string/indicator_refund_count"
            android:drawableLeft="@drawable/vertical_blue_line"
            android:drawablePadding="@dimen/view_spacing_3"
            android:textStyle="bold" />

        <TextView
            style="@style/txt_color66_size14"
            android:layout_marginTop="@dimen/view_spacing_10"
            android:text="@string/indicator_refund_count_explain" />

        <TextView
            style="@style/IndicatorDetails"
            android:layout_marginTop="@dimen/view_spacing_20"
            android:drawableLeft="@drawable/vertical_blue_line"
            android:drawablePadding="@dimen/view_spacing_3"
            android:text="@string/indicator_refund_amount"
            android:textStyle="bold" />

        <TextView
            style="@style/txt_color66_size14"
            android:layout_marginTop="@dimen/view_spacing_10"
            android:layout_marginBottom="@dimen/view_spacing_25"
            android:text="@string/indicator_refund_amount_explain" />

    </LinearLayout>

</LinearLayout>