<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                xmlns:finance="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/white"
                tools:context="com.feifan.bp.password.ForgetPasswordFragment">
    >

    <EditText
        android:id="@+id/et_phone_num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="@dimen/view_spacing_15"
        android:layout_marginRight="@dimen/view_spacing_15"
        android:padding="@dimen/view_spacing_10"
        android:hint="@string/login_phone_edit_hint"
        android:textSize="@dimen/font_size_14"
        android:background="@null"
        android:inputType="phone"/>
    <ImageView
        android:id="@+id/iv_divider1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/et_phone_num"
        android:background="@color/divider"
        android:layout_marginLeft="@dimen/view_spacing_15"
        android:layout_marginRight="@dimen/view_spacing_15"
        />


    <com.feifan.bp.widget.CountDownButton
        android:id="@+id/get_sms_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_divider1"
        android:layout_alignParentRight="true"
        android:gravity="center" 
        android:layout_marginTop="@dimen/view_spacing_15"
        android:layout_marginRight="@dimen/view_spacing_15"
        android:padding="@dimen/view_spacing_10"
        android:text="@string/get_sms_code"
        android:textSize="@dimen/font_size_14"
        android:textColor="@color/font_color_blue"   
        finance:countingText="@string/card_sms_check_resend_format"
        finance:endText="@string/resend" />
    
 
    <EditText
        android:id="@+id/sms_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/get_sms_code"
        android:layout_toLeftOf="@id/get_sms_code"
        android:layout_alignParentLeft="true"
        android:background="@null"
        android:layout_marginTop="@dimen/view_spacing_15"
        android:layout_marginLeft="@dimen/view_spacing_15"
        android:padding="@dimen/view_spacing_10"
        android:hint="@string/input_sms_code"
        android:textSize="@dimen/font_size_14"
        android:inputType="textPassword"/>

    <ImageView
        android:id="@+id/iv_divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/get_sms_code"
        android:background="@color/divider"
        android:layout_marginLeft="@dimen/view_spacing_15"
        android:layout_marginRight="@dimen/view_spacing_15"
        />
    
    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/get_sms_code"
        android:layout_margin="30dp"
        android:background="@drawable/blue_button_background"
        android:text="@string/confirm"
        android:textSize="@dimen/font_size_16"
        android:textColor="@android:color/white"/>
</RelativeLayout>

 
