<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.feifan.bp.home.FeedBackFragment">

    <EditText
        android:id="@+id/et_feedback"
        android:layout_width="match_parent"
        android:layout_height="@dimen/feedback_edittext_height"
        android:background="@drawable/border_top_bottom_background"
        android:layout_marginTop="@dimen/view_spacing_15"
        android:paddingRight="@dimen/view_spacing_10"
        android:paddingLeft="@dimen/view_spacing_10"
        android:paddingTop="@dimen/view_spacing_10"
        android:hint="@string/feed_back_info"
        android:textColorHint="@color/feed_back_color"
        android:gravity="top|left"
        android:textSize="@dimen/font_size_18"
        android:textColor="@color/feed_back_color"
        />

    <TextView
        android:id="@+id/tv_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_feedback"
        android:layout_marginTop="@dimen/view_spacing_8"
        android:layout_marginRight="@dimen/view_spacing_20"
        android:layout_alignParentRight="true"
        android:text="@string/feed_back_prompt"
        android:textSize="@dimen/font_size_18"
        android:textColor="@color/feed_back_color"/>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_prompt"
        android:layout_marginRight="@dimen/view_spacing_15"
        android:layout_marginLeft="@dimen/view_spacing_15"
        android:layout_marginTop="@dimen/feedback_distance_top_height"
        android:background="@drawable/blue_button_background"
        android:text="@string/feed_back_submit"
        android:textSize="@dimen/font_size_20"
        android:textColor="@android:color/white"/>

</RelativeLayout>
